--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ header {
 }
 
 .border-head{
+
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -347,6 +348,7 @@ a:active {
   display: flex;
   flex-wrap: wrap;
   row-gap: 48px;
+  column-gap: 24px;
 }
 .content-portfolio {
   display: flex;
@@ -358,6 +360,7 @@ a:active {
   align-self: stretch;
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .card-portfolio {
