--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ img {
 }
 
 .container {
-  max-width: 1158px auto;
+  max-width: 1158px;
   padding-left: 156px;
   padding-right: 156px;
   margin-left: auto;
