--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,7 @@ a:active {
 }
 .card {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
   display: inline-flex;
   padding-bottom: 32px;
   flex-direction: column;
@@ -365,7 +366,7 @@ a:active {
 
 .card-portfolio {
   display: flex;
-  width: 360px;
+  width: calc((100% - 48px) / 3);
   height: 420px;
   padding-bottom: 32px;
   flex-direction: column;
