--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ p {
 }
 
 ul {
+  list-style: none;
   padding-left: 0;
   margin: 0;
 }
@@ -25,8 +26,8 @@ img {
 
 .container {
   max-width: 1158px;
-  padding-left: 156px;
-  padding-right: 156px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -37,22 +38,17 @@ body {
   background-color: #ffffff;
 }
 header {
-  font-family: "Raleway", sans-serif;
   font-weight: 500;
   color: #2e2f42;
   background-color: inherit;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 .foot {
-  font-family: "Raleway", sans-serif;
   color: #f4f4fd;
   background-color: #2e2f42;
   padding: 100px 0;
 }
 
 .border-head{
-
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -73,7 +69,6 @@ a:active {
 }
 
 .top{
-  width: 1158px;
   padding: 0 15px;
 }
 
@@ -119,7 +114,7 @@ a:active {
   display: inline-flex;
   align-items: center;
   gap: 40px;
-  margin-right: 332px;
+  margin-right: auto;
 }
 
 .logo {
@@ -132,11 +127,8 @@ a:active {
   text-transform: uppercase;
   margin-right: 76px;
   display: inline-block;
-  height: 24px;
   align-items: center;
-  flex-shrink: 0;
-  margin-bottom: 16px;
-  
+  flex-shrink: 0; 
 }
 
 .header-logo {
@@ -168,12 +160,8 @@ a:active {
 }
 
 .hero {
-  padding: 188px 472px 188px 472px;
-  display: block;
   text-align: center;
   flex-shrink: 0;
-  width: 1440px;
-  height: 600px;
 }
 
 .hero-image {
@@ -210,8 +198,6 @@ a:active {
 .card {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
-  display: inline-flex;
-  padding-bottom: 32px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -229,10 +215,8 @@ a:active {
 }
 
 .feature {
-  display: flex;
   width: calc((100% - 72px) / 4);
   flex-direction: column;
-  align-items: flex-start;
   gap: 8px;
 }
 .header-one {
@@ -243,6 +227,8 @@ a:active {
   line-height: 107.143%;
   letter-spacing: 1.12px;
   text-align: center;
+  margin-right:auto;
+  margin-left:auto;
   max-width: 496px;
 }
 .header-two {
@@ -261,7 +247,6 @@ a:active {
   font-weight: 500;
   line-height: 120%;
   letter-spacing: 0.4px;
-  text-align: center;
   margin-bottom: 8px
 }
 .paragraph {
@@ -270,15 +255,12 @@ a:active {
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 0.32px;
-  text-align: center;
-  margin-bottom: 8px;
 }
 .footer-text {
   color: #f4f4fd;
   line-height: 150%;
   letter-spacing: 0.32px;
   width: 264px;
-  padding-top: 16px;
 }
 .list {
   background-color: #fff;
@@ -286,18 +268,13 @@ a:active {
 }
 
 .content-team {
-  display: flex;
-  width: 232px;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  text-align: center;
   gap: 8px;
   padding: 32px 0;
 }
-.cards {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
+
 .cards-ul {
   display: flex;
   flex-wrap: wrap;
@@ -305,7 +282,6 @@ a:active {
 }
 
 .top {
-  width: 1440px;
   flex-shrink: 0;
 }
 
@@ -329,8 +305,6 @@ a:active {
 }
 
 .team {
-  width: 1440px;
-  height: 732px;
   flex-shrink: 0;
 }
 
@@ -352,8 +326,6 @@ a:active {
   column-gap: 24px;
 }
 .content-portfolio {
-  display: flex;
-  padding: 0px 16px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -365,10 +337,7 @@ a:active {
 }
 
 .card-portfolio {
-  display: flex;
   width: calc((100% - 48px) / 3);
-  height: 420px;
-  padding-bottom: 32px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
@@ -382,9 +351,12 @@ a:active {
   max-width: 100%;
 }
 
+.logo-foot{
+  margin-bottom:16px;
+}
+
 .footer-logo {
   color: #f4f4fd;
-  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 117%;
@@ -393,8 +365,5 @@ a:active {
 }
 
 .bottom {
-  width: 1440px;
-  height: 312px;
   flex-shrink: 0;
-  padding: 100px 1020px 100px 156px;
 }
